# CMake-Learning

t2/: CMakeLists.txt  make.sh
t2/perfix/share/doc/cmake/t2/: hello.txt
t2/src/: CMakeLists.txt
t3/: make.sh
t3/lib/: CMakeLists.txt  hello.cpp  hello.h
t3/perfix/lib/: libhello.so.1
t4/: CMakeLists.txt  main  make.sh
t4/src/: CMakeLists.txt
